Add training results: YOLOv8s model with mAP50-95=0.915
- Trained YOLOv8s for 100 epochs on Vietnam license plate dataset
- Dataset: 3431 train images, 1145 val images
- Classes: BSD (bien dai) and BSV (bien vuong)
- Best model metrics: mAP50=0.994, mAP50-95=0.915, Precision=0.985, Recall=0.988
- Speed: 2.6ms/image (~385 FPS)
- Training time: 1.476 hours on RTX 3060
- Added 5 sample images with labels for demo
- Updated README.md with full documentation

--- a/.gitignore
+++ b/.gitignore
@@ -13,33 +13,36 @@ ENV/
 .ipynb_checkpoints
 
 # Dataset - KHÔNG push lên Git (quá nặng!)
-dataset/images/
-dataset/labels/
+dataset/images/train/*
+dataset/images/val/*
+dataset/images/test/*
+dataset/labels/train/*
+dataset/labels/val/*
+dataset/labels/test/*
 dataset/raw_images/
 dataset/raw_labels/
 dataset/annotation_samples/
-*.jpg
-*.jpeg
-*.png
-*.bmp
-*.gif
-*.tiff
 
-# Chỉ giữ cấu trúc thư mục
-!dataset/images/train/.gitkeep
-!dataset/images/val/.gitkeep
-!dataset/images/test/.gitkeep
-!dataset/labels/train/.gitkeep
-!dataset/labels/val/.gitkeep
-!dataset/labels/test/.gitkeep
+# Giữ lại sample để demo
+!dataset/images/train/sample_*
+!dataset/labels/train/sample_*
 
 # Training results
-runs/
-*.pt  # Model files - dùng Git LFS nếu cần
+runs/detect/
+runs/train/*/weights/last.pt
+runs/train/*/weights/epoch*.pt
+
+# Giữ lại best model và results để demo
+!runs/train/*/weights/best.pt
+!runs/train/*/results.png
+!runs/train/*/confusion_matrix.png
+
+# Model files khác
 *.pth
 *.onnx
 *.engine
 *.tflite
+yolo*.pt
 
 # Logs
 *.log
